# fastApi_apiclient

./: README.md  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/routes/: patient.py
app/services/: fhir_service.py
tests/: test_hello.py  test_patient_routes.py
